--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "test": {
       "buildpacks": [
         { "url": "heroku/java" },
+        { "url": "https://github.com/heroku/heroku-buildpack-chromedriver" },
         { "url": "https://github.com/heroku/heroku-buildpack-google-chrome" }
       ]
     }
